# SAD

P2-sad/util/: ConnectionTable.java
Practica1/: TestReadLine.java  TestReadMultiline.java
Practica2/: Clientxat.java  Serverxat.java
Practica2/util/: MyServerSocket.java  MySocket.java
Practica3/: ClientXat.java  Handler.java  Reactor.java  ServerXat.java  rev.txt
Practica3/swing/: LoginWindow.java  Window.java  XatWindow.java  proves.java
Practica3/util/: ConnectionTable.java  MySocket.java
Projecte/project-webapp/: dump.rdb  local.env
Projecte/project-webapp/webapp/: Cargo.toml
Projecte/project-webapp/webapp_activities/: Cargo.toml
Projecte/project-webapp/webapp_activities/src/: lib.rs
Projecte/project-webapp/webapp_db/: Cargo.toml
Projecte/project-webapp/webapp_db/src/: db_init.rs  iam_queries.rs
Projecte/project-webapp/webapp_db/tests/test_db_init/: init_db.sh
Projecte/project-webapp/webapp_frontend/static/: index.html  login_page.html  main_page.html  main_page.js  style.css
Projecte/project-webapp/webapp_iam/: Cargo.toml
Projecte/project-webapp/webapp_iam/src/: iam_logic.rs  lib.rs  sign_in_sign_up_service.rs
Projecte/rust-auth-webapp/: Cargo.toml  README.md
Projecte/rust-auth-webapp/webapp/src/: main.rs
Projecte/rust-auth-webapp/webapp_activities/src/: activities_service.rs
Projecte/rust-auth-webapp/webapp_db/src/: activities_queries.rs  lib.rs
Projecte/rust-auth-webapp/webapp_db/tests/: test.rs
Projecte/rust-auth-webapp/webapp_frontend/static/: iam.js
