[package]
name = "auth-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "1.20.1"
eyre = "0.6.8"
fred = "5.1.0"
rusqlite = "0.28.0"
webapp_iam = { path = "../webapp_iam" }
webapp_activities = { path = "../webapp_activities" }
webapp_db = { path = "../webapp_db" }
sqlx = { version = "0.6.0", default-features = false, features = [
    "postgres",
    "macros",
    "offline",
    "runtime-actix-native-tls",
]}
dotenv = "0.15.0"
