[package]
name = "webapp_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.20.1"
eyre = "0.6.8"
sqlx = { version = "0.6.0", default-features = false, features = [
    "postgres",
    "macros",
    "offline",
    "runtime-actix-native-tls",
]}
dotenv = "0.15.0"
rocket = "0.5.0-rc.2"
serde = "1.0.147"